fix wmediumd_config function with the test.cfg and the latency will increase

--- a/test.cfg
+++ b/test.cfg
@@ -1,13 +1,11 @@
 ifaces :
 {
+    count=4;
     ids = [
     "02:00:00:00:01:00",
     "02:00:00:00:02:00",
     "02:00:00:00:03:00",
-    "02:00:00:00:00:04",
-    "02:00:00:00:00:05",
-    "02:00:00:00:00:06",
-    "02:00:00:00:00:07"
+    "02:00:00:00:00:04"
     ];
 }
         
@@ -15,24 +13,18 @@ model :
 {
     type = "path_loss";
     positions = (
-        (140.0, 0.0, 0.0),
-        (-140.0, 0.0, 0.0),
+        (100.0, 0.0, 0.0),
+        (-100.0, 0.0, 0.0),
         (-200.0, 0.0, 0.0),
-        (250.0, 0.0, 30.0),
-        (50.0, 50.0, 0.0),
-        (1.0, 20.0, 300.0),
-        (10.0, 20.0, 30.0)
+        (200.0, 0.0, 0.0)
     );
     directions = (
-        (-10.0, 1.0),
-        (10.0, 1.0),
+        (-10.0, 0.0),
+        (10.0, 0.0),
         (0.0, 0.0),
-        (-10.0, -10.0),
-        (0.0, 0.0),
-        (10.0, 10.0),
-        (1.0, 1.0)
+        (-10.0, -10.0)
     );
-    tx_powers = (30.0, 30.0, 30.0, 30.0, 30.0, 30.0, 30.0);    
+    tx_powers = (40.0, 40.0, 40.0, 40.0);
     model_name = "log_distance";
     path_loss_exp = 3.5;
     xg = 0.0;
