--- a/test.cfg
+++ b/test.cfg
@@ -1,11 +1,14 @@
 ifaces :
 {
-    count=4;
+    count=7;
     ids = [
     "02:00:00:00:01:00",
     "02:00:00:00:02:00",
     "02:00:00:00:03:00",
-    "02:00:00:00:00:04"
+    "02:00:00:00:00:04",
+    "02:00:00:00:00:05",
+    "02:00:00:00:00:06",
+    "02:00:00:00:00:07"
     ];
 }
         
@@ -13,18 +16,24 @@ model :
 {
     type = "path_loss";
     positions = (
-        (100.0, 0.0, 0.0),
-        (-100.0, 0.0, 0.0),
-        (-200.0, 0.0, 0.0),
-        (200.0, 0.0, 0.0)
+        (180.0, 0.0, 0.0),
+        (-180.0, 0.0, 0.0),
+        (0.0, 100.0, 0.0),
+        (0.0, -100.0, 0.0),
+        (50.0, 50.0, 0.0),
+        (100.0, 20.0, 30.0),
+        (100.0, 200.0, 30.0)
     );
     directions = (
-        (-10.0, 0.0),
-        (10.0, 0.0),
+        (-0.1, 0.0),
+        (0.1, 0.0),
         (0.0, 0.0),
-        (-10.0, -10.0)
+        (-1.0, 0.0),
+        (0.0, 0.0),
+        (1.0, 1.0),
+        (1.0, 1.0)
     );
-    tx_powers = (40.0, 40.0, 40.0, 40.0);
+    tx_powers = (40.0, 40.0, 40.0, 40.0, 40.0, 40.0, 40.0);
     model_name = "log_distance";
     path_loss_exp = 3.5;
     xg = 0.0;
