fix the network black hole and update to the version 0.2.0

--- a/test.cfg
+++ b/test.cfg
@@ -1,14 +1,11 @@
 ifaces :
 {
-    count=7;
+    count=4;
     ids = [
     "02:00:00:00:01:00",
     "02:00:00:00:02:00",
     "02:00:00:00:03:00",
-    "02:00:00:00:00:04",
-    "02:00:00:00:00:05",
-    "02:00:00:00:00:06",
-    "02:00:00:00:00:07"
+    "02:00:00:00:00:04"
     ];
 }
         
@@ -19,21 +16,15 @@ model :
         (180.0, 0.0, 0.0),
         (-180.0, 0.0, 0.0),
         (0.0, 100.0, 0.0),
-        (0.0, -100.0, 0.0),
-        (50.0, 50.0, 0.0),
-        (100.0, 20.0, 30.0),
-        (100.0, 200.0, 30.0)
+        (0.0, -100.0, 0.0)
     );
     directions = (
         (-0.1, 0.0),
         (0.1, 0.0),
         (0.0, 0.0),
-        (-1.0, 0.0),
-        (0.0, 0.0),
-        (1.0, 1.0),
-        (1.0, 1.0)
+        (-1.0, 0.0)
     );
-    tx_powers = (40.0, 40.0, 40.0, 40.0, 40.0, 40.0, 40.0);
+    tx_powers = (40.0, 40.0, 40.0, 40.0);
     model_name = "log_distance";
     path_loss_exp = 3.5;
     xg = 0.0;
